--- a/index.html
+++ b/index.html
@@ -30,47 +30,42 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
                     <li><a href="masculino.html">MASCULINO</a></li>
-                    </li>
                     <li><a href="informacion.html">INFORMACION</a></li>
-                    </li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                    </li>
                 </ul>
             </nav>
-
         </div>
     </header>
 
     <main class="main">
 
         <div class="portada">
-            <img class="imagen-portada"
+            <img class="imagen-portada img-fluid"
                 src="https://images.unsplash.com/photo-1529900748604-07564a03e7a6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
         </div>
 
         <div class="banner">
             <a href="informacion.html">
                 <h2 class="h2-informacion">INFORMACION</h2>
-                <img class="imagen-banner"
+                <img class="imagen-banner img-fluid"
                     src="http://file.hstatic.net/1000061481/file/nike_daybreak___1__f19632801e57407aa1618cbda255f772.jpg">
             </a>
         </div>
 
-        <section class="masculino-femenino">
-            <div class="femenino">
-                <a href="femenino.html">
-                    <h2 class="h2-femenino">FEMENINO</h2>
-                    <img class="imagen-femenino"
-                        src="https://images.pexels.com/photos/9519506/pexels-photo-9519506.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                </a>
-            </div>
-            <div class="masculino">
-                <a href="masculino.html">
-                    <h2 class="h2-masculino">MASCULINO</h2>
-                    <img class="imagen-masculino"
-                        src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-                </a>
-            </div>
+        <div class="femenino">
+            <a href="femenino.html">
+                <h2 class="h2-femenino">FEMENINO</h2>
+                <img class="imagen-femenino img-fluid"
+                    src="https://images.pexels.com/photos/9519506/pexels-photo-9519506.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+            </a>
+        </div>
+        <div class="masculino">
+            <a href="masculino.html">
+                <h2 class="h2-masculino img-fluid">MASCULINO</h2>
+                <img class="imagen-masculino"
+                    src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+            </a>
+        </div>
         </section>
     </main>
 
