--- a/femenino.html
+++ b/femenino.html
@@ -55,9 +55,9 @@
             <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
         </div>
 
-        <div class="contenedor-posiciones-masculino">
+        <div class="contenedor-posiciones-femenino">
             <h2>Tabla de posiciones</h2>
-            <table class="posiciones-masculino">
+            <table class="posiciones-femenino">
                 <tr>
                     <td>NOMBRE</td>
                     <td>PTS</td>
@@ -117,13 +117,13 @@
 
    
 
-    <footer class="footer-femenino">
-        <a href="https://es-la.facebook.com/"><img class="redes"
-                src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png"><a>
-                <a href="https://www.instagram.com/?hl=es-la"><img class="redes"
-                        src="https://i.pinimg.com/564x/1a/db/0e/1adb0e1f5d3800942accbca2422be08e.jpg"></a>
-                <P>Todos los derechos reservados.</P>
-    </footer>
+        <footer class="footer-femenino">
+            <a href="https://es-la.facebook.com/"><img class="redes"
+                    src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png"><a>
+                    <a href="https://www.instagram.com/?hl=es-la"><img class="redes"
+                            src="https://i.pinimg.com/564x/1a/db/0e/1adb0e1f5d3800942accbca2422be08e.jpg"></a>
+                    <P>Todos los derechos reservados.</P>
+        </footer>
 </body>
 
 </html>
