--- a/index.html
+++ b/index.html
@@ -28,36 +28,34 @@
             </div>
 
 
-            <nav class="col-lg-10 col-md-6 col-sm-12 navegacion">
-                <div class="navbar navbar-expand-lg navbar-light bg-light">
-                   
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="index.html">INICIO </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="femenino.html">FEMENINO</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="masculino.html">MASCULINO</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link disabled" href="informacion.html">INFORMACION</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="contacto.html">CONTACTO</a>
+            <div class="col-lg-10 col-md-6 col-sm-12 navegacion">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#">Navbar</a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
                           </li>
-                      </ul>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
+                  </nav>
                 </div>
-
-            </nav>
         </section>
-        </div>
+      
     </header>
 
     <main class="row main">
