--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
 </head>
 
-<body class="container-fluid">
+<body class="container-fuid">
     <header class="row header">
 
 
@@ -36,23 +36,23 @@
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                          <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="femenino.html">FEMENINO</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="masculino.html">MASCULINO</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="informacion.html">INFORMACION</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">CONTACTO</a>
-                          </li>
-                        </ul>
+                            <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="femenino.html">FEMENINO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="masculino.html">MASCULINO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="informacion.html">INFORMACION</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contacto.html">CONTACTO</a>
+                            </li>
+                            </ul>
                       </div>
                     </div>
                   </nav>
