--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
 </head>
 
-<body class="container-fuid">
+<body class="container-fuid contenedor-body">
     <header class="row header">
 
 
