--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
             <div class="col-lg-10 col-md-6 col-sm-12 navegacion">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="barra navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
