--- a/femenino.html
+++ b/femenino.html
@@ -88,8 +88,8 @@
 
     <div class="row contenedor-posiciones-femenino">
       <h2 class="col-sm-12 col-md-12 col-lg-12">Tabla de posiciones</h2>
-      <div class="col-sm-12 col-md-12 col-lg-12 ">
-        <table class="tabla-posiciones-femenino">
+      <div class="col-sm-12 col-md-12 col-lg-12 tabla-posiciones-femenino">
+        <table class="table">
           <thead class="thead-dark">
             <tr>
               <th scope="col">#</th>
