--- a/femenino.html
+++ b/femenino.html
@@ -88,7 +88,7 @@
 
     <div class="row contenedor-posiciones-femenino">
       <h2 class="col-sm-12 col-md-12 col-lg-12">Tabla de posiciones</h2>
-      <div class="col-sm-12 col-md-12 col-lg-12 tabla-posiciones-femenino">
+      <div class="col-sm-12 col-md-12 col-lg-12">
         <table class="table">
           <thead class="thead-dark">
             <tr>
