--- a/femenino.html
+++ b/femenino.html
@@ -87,8 +87,8 @@
 
 
     <div class="row contenedor-posiciones-femenino">
-      <h2 class="col-sm-12 col-md-6 col-lg-6">Tabla de posiciones</h2>
-      <div class="col-sm-12 col-md-6 col-lg-6">
+      <h2 class="col-sm-12 col-md-12 col-lg-12">Tabla de posiciones</h2>
+      <div class="col-sm-12 col-md-12 col-lg-12 tabla-femenino">
         <table class="table">
           <thead class="thead-dark">
             <tr>
